--- a/src/css/main.css
+++ b/src/css/main.css
@@ -143,7 +143,7 @@ header{
 .menu-item{
   margin-bottom: 15%;
   text-align: center;
-  padding: 30px;
+  padding: 20px 0 20px 0;
 }
 
 .menu-item:hover{
